// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`navTheme matches dark theme snapshot 1`] = `
{
  "colors": {
    "background": "hsl(0 0% 3.9%)",
    "border": "hsl(0 0% 14.9%)",
    "card": "hsl(0 0% 3.9%)",
    "notification": "hsl(0 70.9% 59.4%)",
    "primary": "hsl(0 0% 98%)",
    "text": "hsl(0 0% 98%)",
  },
  "dark": true,
  "fonts": {
    "bold": {
      "fontFamily": "System",
      "fontWeight": "600",
    },
    "heavy": {
      "fontFamily": "System",
      "fontWeight": "700",
    },
    "medium": {
      "fontFamily": "System",
      "fontWeight": "500",
    },
    "regular": {
      "fontFamily": "System",
      "fontWeight": "400",
    },
  },
}
`;

exports[`navTheme matches light theme snapshot 1`] = `
{
  "colors": {
    "background": "hsl(0 0% 100%)",
    "border": "hsl(0 0% 89.8%)",
    "card": "hsl(0 0% 100%)",
    "notification": "hsl(0 84.2% 60.2%)",
    "primary": "hsl(0 0% 9%)",
    "text": "hsl(0 0% 3.9%)",
  },
  "dark": false,
  "fonts": {
    "bold": {
      "fontFamily": "System",
      "fontWeight": "600",
    },
    "heavy": {
      "fontFamily": "System",
      "fontWeight": "700",
    },
    "medium": {
      "fontFamily": "System",
      "fontWeight": "500",
    },
    "regular": {
      "fontFamily": "System",
      "fontWeight": "400",
    },
  },
}
`;
